# mnemo

./: .agent-audit-kit.yml  .gitignore  .pre-commit-config.yaml  ASMD-Technical-Blueprint.docx  ASMD-Technical-Blueprint.md  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SYNC-REPORT.md  deny.toml  docker-compose.yml
bench/: RESULTS.md
bench/asi06_poisoning/: Cargo.toml
bench/asi06_poisoning/src/: lib.rs  main.rs
bench/audit_conformance/: Cargo.toml  README.md
bench/audit_conformance/results/: conformance.json  conformance.md
bench/audit_conformance/src/: main.rs
bench/audit_tamper/: Cargo.toml
bench/audit_tamper/results/: audit_tamper.json  audit_tamper.md
bench/audit_tamper/src/: lib.rs  main.rs
bench/audit_tamper/tests/: tamper.rs
bench/embeddings/: Cargo.toml  README.md
bench/embeddings/benches/: embedding_quality.rs
bench/embeddings/data/: corpus.json  queries.json
bench/embeddings/src/: lib.rs
bench/locomo/: Cargo.toml  README.md
bench/locomo/results/: asi06_resistance_2026-07-02.json  asi06_resistance_2026-07-02.md  auto_dreamer_2026-05-25.json  auto_dreamer_2026-05-25.md  beam_2026-07-04.json  beam_2026-07-04.md  grep_vs_vector_2026-05-17.md  interference_2026-05-22.md  maturity_2026-05-29.json  maturity_2026-05-29.md  orientation_2026-05-23.md  reconstruct_ab_2026-06-21.md  reproduction_2026-07-06.json  reproduction_2026-07-06.md  semantic_recall_2026-06-13.json  semantic_recall_2026-06-13.md  semantic_recall_2026-06-22.json  semantic_recall_2026-06-22.md  semantic_recall_2026-06-29.json  semantic_recall_2026-06-29.md
bench/locomo/src/: dataset.rs  judge.rs  lib.rs  main.rs  phase_cost.rs  real_embedder.rs  runner.rs  scoring.rs  stats.rs
bench/locomo/tests/: locomo_runner_smoke.rs  reproduction_byte_stable.rs
bench/poisoning/: Cargo.toml  README.md
bench/poisoning/results/: poisoning_2026-07-07.json  poisoning_2026-07-07.md
bench/poisoning/src/: lib.rs  main.rs  real_embedder_bench.rs
bench/poisoning/tests/: poisoning_defense.rs
bench/retention_conformance/: Cargo.toml  README.md
bench/retention_conformance/results/: retention_conformance.json  retention_conformance.md
bench/retention_conformance/src/: lib.rs  main.rs
bench/retention_conformance/tests/: conformance.rs
crates/mnemo-admin/: Cargo.toml
crates/mnemo-admin/src/: dashboard.html  handlers.rs  lib.rs
crates/mnemo-admin/tests/: admin_test.rs
crates/mnemo-amp/: Cargo.toml
crates/mnemo-amp/src/: approval.rs  error.rs  lib.rs  router.rs  store.rs  wire.rs
crates/mnemo-amp/tests/: conformance.rs
crates/mnemo-attention-state/: Cargo.toml  README.md
crates/mnemo-attention-state/src/: lib.rs
crates/mnemo-baseline/: Cargo.toml
crates/mnemo-baseline/src/: anomaly.rs  exporter.rs  lib.rs  profile.rs
crates/mnemo-cli/: Cargo.toml
crates/mnemo-cli/src/: lease.rs  main.rs  manifest.rs  safe_spawn.rs
crates/mnemo-cli/tests/: changelog_has_landing_trace_section.rs  changelog_has_unreleased_section.rs  dashboard_json.rs  example_recalls_doc_present.rs  readme_crate_claims_are_real.rs  readme_dreams_link.rs  readme_mcp_roadmap_link.rs  readme_no_marketing_phrases.rs  readme_project_think_link.rs  readme_workers_template_link.rs  release_status_doc_present.rs  research_doc_argus_present.rs  research_doc_delegate52_present.rs  safe_spawn_integration.rs
crates/mnemo-cma/: Cargo.toml
crates/mnemo-cma/src/: audit_bridge.rs  lib.rs  migrate.rs  tree.rs
crates/mnemo-codemode/: Cargo.toml
crates/mnemo-codemode/src/: bindings.rs  lib.rs  runner.rs  token.rs
crates/mnemo-codemode/wit/: mnemo-memory.wit
crates/mnemo-compliance/: Cargo.toml  README.md
crates/mnemo-compliance/src/: audit.rs  consent.rs  error.rs  lib.rs  mannsetu.rs  retention.rs  trajectory.rs
crates/mnemo-core/: Cargo.toml  README.md
crates/mnemo-core/benches/: engine_bench.rs  longmemeval_bench.rs
crates/mnemo-core/examples/: gen_golden_fixture.rs
crates/mnemo-core/src/: auth.rs  cache.rs  config.rs  encryption.rs  error.rs  hash.rs  lib.rs  provenance.rs  retrieval.rs
crates/mnemo-core/tests/: agent_managed_crossover.rs  budgeted_evidence_retention.rs  consolidate.rs  cost_aware_recall.rs  domain_scoped_dilution.rs  experience_memory.rs  integration_test.rs  memfail_isolation.rs  migration_roundtrip.rs  provenance_chain.rs  reconstruct.rs  semantic_recall_hard_error.rs  version_metadata.rs
crates/mnemo-db/: Cargo.toml  README.md
crates/mnemo-db/src/: lib.rs
crates/mnemo-deal/: Cargo.toml
crates/mnemo-deal/src/: discovery.rs  dispute.rs  envelope.rs  ledger.rs  lib.rs  reputation.rs
crates/mnemo-golem-host/: Cargo.toml
crates/mnemo-golem-host/examples/: golem_agent_round_trip.rs
crates/mnemo-golem-host/src/: lib.rs
crates/mnemo-golem-wit/: Cargo.toml
crates/mnemo-golem-wit/src/: bindings.rs  lib.rs
crates/mnemo-graph/: Cargo.toml
crates/mnemo-grpc/: Cargo.toml  build.rs
crates/mnemo-letta/: Cargo.toml
crates/mnemo-mcp/: Cargo.toml  README.md
crates/mnemo-md-sync/: Cargo.toml
crates/mnemo-mesh/: Cargo.toml
crates/mnemo-pgwire/: Cargo.toml
python/: Cargo.toml  README.md  pyproject.toml
python/mnemo/: __init__.py  __main__.py  agno_memory.py  anthropic_memory_tool.py  autogen_memory.py  availability.py  camel_memory.py  checkpointer.py  claude_agent_sdk.py  crewai_memory.py  dpdpa_passport.py  dspy_tools.py  google_adk.py  install_claude_code.py  langgraph_mcp.py  letta_adapter.py  llama_stack_memory.py  mcp_config.py  mem0_compat.py  openai_agents.py  openai_sessions.py  openai_sessions_ga.py  provenance.py  pydantic_ai_memory.py  semantic_kernel_memory.py  smolagents_memory.py  strands_memory.py
python/src/: lib.rs
python/tests/: test_anthropic_memory_tool.py  test_availability.py  test_benchmark_harness.py  test_claude_agent_sdk.py  test_dpdpa_passport.py  test_install_claude_code.py  test_judge.py  test_langgraph_checkpointer.py  test_letta_adapter.py  test_openai_sessions.py  test_openai_sessions_ga.py  test_provenance.py  test_r2_workspace.py  test_s3_workspace.py  test_version_alignment.py
(+278 files in other folders)
