[workspace]
resolver = "2"
members = [
    "crates/mnemo-core",
    "crates/mnemo-mcp",
    "crates/mnemo-cli",
    "crates/mnemo-postgres",
    "crates/mnemo-rest",
    "crates/mnemo-admin",
    "crates/mnemo-pgwire",
    "crates/mnemo-grpc",
    "crates/mnemo-compliance",
    "crates/mnemo-graph",
    "crates/mnemo-letta",
    "crates/mnemo-mesh",
    "crates/mnemo-codemode",
    "crates/mnemo-deal",
    "crates/mnemo-md-sync",
    "crates/mnemo-cma",
    "crates/mnemo-baseline",
    "crates/mnemo-attention-state",
    "crates/mnemo-golem-wit",
    "crates/mnemo-golem-host",
    "bench/locomo",
    "python",
]

[workspace.package]
version = "0.4.6"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/sattyamjjain/mnemo"
description = "MCP-native memory database for AI agents"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IDs and hashing
uuid = { version = "1.11", features = ["v7", "serde"] }
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"

# Storage
# duckdb-rs re-versioned to a calendar-style scheme aligned with the
# underlying DuckDB engine: 1.10502.0 wraps DuckDB 1.5.2 (year 1,
# month 05, patch 02). See https://github.com/duckdb/duckdb-rs/releases.
# Tracked at #41 (Step 1 — bump; Step 2 — DuckLake opt-in deferred to v0.5.x).
duckdb = { version = "=1.10502.0", features = ["bundled"] }

# Vector index
usearch = "2.21"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Embedding
reqwest = { version = "0.13", features = ["json"] }

# MCP
rmcp = { version = "1.3", features = ["server", "transport-io"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Full-text search
tantivy = "0.26"

# Async trait
async-trait = "0.1"

# Error handling
thiserror = "2.0"

# Schema generation
schemars = "1.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }

# Python bindings
pyo3 = { version = "0.28", features = ["extension-module"] }

# HTTP/REST
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
pgvector = { version = "0.8.2", features = ["sqlx"] }

# Internal crates.
# `version` MUST be present alongside `path` for `cargo publish` to accept
# these. Path is used for local dev; version is what gets baked into the
# published crate's manifest. Bump alongside `workspace.package.version`.
mnemo-core = { path = "crates/mnemo-core", version = "0.4.6" }
mnemo-mcp = { path = "crates/mnemo-mcp", version = "0.4.6" }
mnemo-postgres = { path = "crates/mnemo-postgres", version = "0.4.6" }
mnemo-rest = { path = "crates/mnemo-rest", version = "0.4.6" }
mnemo-admin = { path = "crates/mnemo-admin", version = "0.4.6" }
mnemo-pgwire = { path = "crates/mnemo-pgwire", version = "0.4.6" }
mnemo-grpc = { path = "crates/mnemo-grpc", version = "0.4.6" }
mnemo-graph = { path = "crates/mnemo-graph", version = "0.4.6" }
mnemo-attention-state = { path = "crates/mnemo-attention-state", version = "0.4.6" }
mnemo-golem-wit = { path = "crates/mnemo-golem-wit", version = "0.4.6" }
mnemo-golem-host = { path = "crates/mnemo-golem-host", version = "0.4.6" }
