[package]
name = "mnemo-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for Mnemo memory database"

[lib]
name = "_mnemo"
crate-type = ["cdylib"]

[dependencies]
mnemo-core = { workspace = true }
pyo3 = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
