[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mnemo"
version = "0.3.1"
description = "MCP-native memory database for AI agents"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
langgraph = ["langgraph-checkpoint>=0.2"]
crewai = ["crewai>=0.40"]
openai-agents = ["openai-agents>=0.1"]
claude = ["claude-agent-sdk>=0.1", "watchdog>=4.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "mnemo._mnemo"
