[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mnemo"
version = "0.3.3"
description = "MCP-native memory database for AI agents"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
langgraph = ["langgraph-checkpoint>=0.2"]
crewai = ["crewai>=0.40"]
openai-agents = ["openai-agents>=0.1"]
claude = ["claude-agent-sdk>=0.1", "watchdog>=4.0"]
# Workspace backends for the OpenAI Agents SDK GA snapshot store.
# `mnemo[openai-sandbox-s3]` pulls `boto3` + `cryptography`; R2/GCS/Azure
# stubs today — follow-on extras once the respective SDKs land.
"openai-sandbox-s3" = ["boto3>=1.34", "cryptography>=42"]
benchmark = ["datasets>=4.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "moto>=5.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "mnemo._mnemo"
