[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
# Published on PyPI as `mnemo-db` because `mnemo` (a 2021 notebook
# project) holds the unqualified name. The Python package directory,
# import path, and SDK class names stay `mnemo` / `MnemoClient` — only
# the PyPI distribution name moves. Users do `pip install mnemo-db`
# then `from mnemo import MnemoClient`.
name = "mnemo-db"
version = "0.5.11"
description = "MCP-native memory database for AI agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = [
    "mnemo",
    "mcp",
    "memory",
    "ai",
    "agent",
    "llm",
    "vector",
    "embeddings",
    "knowledge-graph",
    "duckdb",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/sattyamjjain/mnemo"
Repository = "https://github.com/sattyamjjain/mnemo"
Documentation = "https://github.com/sattyamjjain/mnemo#readme"
"Bug Tracker" = "https://github.com/sattyamjjain/mnemo/issues"
Changelog = "https://github.com/sattyamjjain/mnemo/blob/main/CHANGELOG.md"

[project.optional-dependencies]
langgraph = ["langgraph-checkpoint>=0.2"]
crewai = ["crewai>=0.40"]
openai-agents = ["openai-agents>=0.1"]
claude = ["claude-agent-sdk>=0.1", "watchdog>=4.0"]
# Workspace backends for the OpenAI Agents SDK GA snapshot store.
# `mnemo[openai-sandbox-s3]` pulls `boto3` + `cryptography`; R2/GCS/Azure
# stubs today — follow-on extras once the respective SDKs land.
"openai-sandbox-s3" = ["boto3>=1.34", "cryptography>=42"]
"openai-sandbox-r2" = ["boto3>=1.34", "cryptography>=42"]
"anthropic-memory-tool" = ["anthropic>=0.40"]
benchmark = ["datasets>=4.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "moto>=5.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "mnemo._mnemo"
