[package]
name = "mnemo-audit-tamper-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Adversarial tamper-evidence bench for mnemo's SHA-256 hash-chained agent_events log: delete / reorder / forge / truncate scored by the shipped verify_event_chain primitive (EU AI Act Art.12 record-keeping)."

[[bin]]
name = "audit_tamper_bench"
path = "src/main.rs"

[dependencies]
# Builds ENTIRELY on mnemo-core's shipped primitives — a real agent_events chain
# is produced through engine.remember(), exported, attacked in memory, and scored
# by hash::verify_event_chain. It never re-implements hashing or verification.
mnemo-core = { workspace = true }
# Reuse the shared Wilson 95% helper the other benches use.
mnemo-locomo-bench = { path = "../locomo" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
clap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
