[package]
name = "mnemo-locomo-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "LoCoMo authenticated nightly runner with cross-judge variance bands (v0.4.1 P0-1)."

[[bin]]
name = "mnemo-locomo"
path = "src/main.rs"

[[bin]]
name = "grep_vs_vector_replay"
path = "src/bin/grep_vs_vector_replay.rs"

[[bin]]
name = "semantic_recall_bench"
path = "src/bin/semantic_recall_bench.rs"

[[bin]]
name = "interference"
path = "src/bin/interference.rs"

[[bin]]
name = "orientation"
path = "src/bin/orientation.rs"

[[bin]]
name = "auto_dreamer_consolidation"
path = "src/bin/auto_dreamer_consolidation.rs"

[[bin]]
name = "maturity_consolidation"
path = "src/bin/maturity_consolidation.rs"

[[bin]]
name = "phase_cost"
path = "src/bin/phase_cost.rs"

[[bin]]
name = "reconstruct_ab"
path = "src/bin/reconstruct_ab.rs"

[[bin]]
name = "asi06_resistance"
path = "src/bin/asi06_resistance.rs"

[dependencies]
mnemo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
