[package]
name = "mnemo-retention-conformance-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Offline, deterministic processing-log retention-conformance harness for mnemo: drives every deletion/compaction/cold-tier path against the append-only agent_events log and asserts a retention floor held (DPDP Rules 2025 / EU AI Act Art.19 / HIPAA §164.312(b))."

[[bin]]
name = "retention_conformance"
path = "src/main.rs"

[dependencies]
# The bench drives mnemo-core's shipped deletion paths (forget / run_ttl_sweep /
# run_decay_pass / run_consolidation / cold archive) and scores retention with
# mnemo-compliance's shipped RetentionProfile. It re-implements nothing.
mnemo-core = { workspace = true }
mnemo-compliance = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
