[package]
name = "mnemo-attention-state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Attention-state-memory storage substrate for mnemo (v0.4.5; anchored on arXiv:2605.18226 Context Memorization)."

[dependencies]
mnemo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
