[package]
# Published as `mnemo-mcp-server` because `mnemo-cli` is owned on
# crates.io by github.com/watzon/mnemo (a different LLM-memory-proxy
# project). The directory stays `crates/mnemo-cli/` and the installed
# binary stays `mnemo` — only the published package name moves.
name = "mnemo-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mnemo MCP memory server — runnable binary; install as `cargo install mnemo-mcp-server`, run as `mnemo`."

[[bin]]
name = "mnemo"
path = "src/main.rs"

[dependencies]
mnemo-core = { workspace = true }
mnemo-mcp = { workspace = true }
mnemo-rest = { workspace = true, optional = true }
mnemo-admin = { workspace = true, optional = true }
mnemo-pgwire = { workspace = true, optional = true }
mnemo-grpc = { workspace = true, optional = true }
mnemo-postgres = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["rest"]
rest = ["dep:mnemo-rest", "dep:axum"]
admin = ["dep:mnemo-admin"]
pgwire = ["dep:mnemo-pgwire"]
grpc = ["dep:mnemo-grpc"]
postgres = ["dep:mnemo-postgres"]
