[package]
name = "mnemo-golem-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wasmtime host runner for the mnemo-golem-wit WASM component (v0.4.6 vertical slice of golemcloud/golem-ai#21). Supplies host imports backed by an mnemo_core::MnemoEngine."

[dependencies]
mnemo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
uuid = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# wasmtime is the WASM-component runtime. Tracks the stable v45
# component-model release. NOTE: this crate's source does not yet call
# the wasmtime API (the Linker/Store/bindgen wiring is deferred — see the
# lib.rs module doc), so the version is a forward-looking pin; bumps are
# resolve/compile-only until the loader integration lands.
wasmtime = { version = "46.0", features = ["component-model"] }
wasmtime-wasi = "46.0"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tempfile = { workspace = true }
