[package]
name = "mnemo-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gRPC API server for Mnemo"

[dependencies]
mnemo-core = { workspace = true }
tonic = "0.12"
prost = "0.13"
tokio = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
