[package]
name = "mnemo-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gRPC API server for Mnemo"

[dependencies]
mnemo-core = { workspace = true }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"
