[package]
name = "mnemo-letta"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Letta-protocol-compatible REST surface backed by Mnemo (v0.4.0-rc3 Task B5)."

[dependencies]
mnemo-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
