[package]
name = "mnemo-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server interface for Mnemo memory database"

[dependencies]
mnemo-core = { workspace = true }
mnemo-attention-state = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
mnemo-attention-state = { workspace = true }
